--- a/public/index.html
+++ b/public/index.html
@@ -39,16 +39,18 @@
 
   <div ng-view></div>
 
-  <div class="row">
+  <div class="container marketing">
     <div class="span1"></div>
     <div class="span11">
-      <footer>
+      <div class="row">
+        <footer>
         <p>
-          <a href="http://www.steampowered.com">Powered by Steam.</a>  This site is not affiliated with Valve, Steam, or any of their partners.  
-          All copyrights reserved to their respective owners.
+        <a href="http://www.steampowered.com">Powered by Steam.</a>  This site is not affiliated with Valve, Steam, or any of their partners.  
+        All copyrights reserved to their respective owners.
         </p>
         <p>&copy; Wesley Kerr 2013</p> 
-      </footer>
+        </footer>
+      </div>
     </div>
   </div>
 </body>
