--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Steam Recommender</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-cookies.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-animate.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.6.0/ui-bootstrap-tpls.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.8.0/ui-bootstrap-tpls.min.js"></script>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css">
   <script src="js/recomms-app.js"></script> 
   <script src="js/recomms.js"></script>
+  <link rel="stylesheet" href="css/recomms.css">
   <link rel="stylesheet" href="css/carousel.css">
 </head>
 <body>
@@ -18,7 +22,12 @@
       <div class="container">
         <div class="navbar navbar-inverse navbar-static-top">
           <div class="navbar-inner">
-            <a class="brand" href="#">Steam Recommender</a>
+            <a class="brand" href="#">
+              <span class="app-loading-container">
+                <span class="app-loading-animation" data-ng-class="status"></span>
+              </span>
+              Steam Recommender
+            </a>
             <ul class="nav navbar-nav">
               <li><a href="#/profile">Profile</a></li>
               <li><a href="#/recomms">Recommendations</a></li>
