Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Steam Recommender</h1>
-        <p>personalized recommendations for the Steam platform</p>
+        <p>Personalized recommendations for the Steam platform.</p>
 
         <p class="view"><a href="https://github.com/wesleykerr/steamrecommender-webapp">View the Project on GitHub <small>wesleykerr/steamrecommender-webapp</small></a></p>
 
