Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
         </ul>
       </header>
       <section>
-        <h3>
+        <p>Steam Recommender was a side project that I intended to do for a long time. I started work on the project in 2013 because I was disappointed with the recommendations that the Steam platform provided.  I thought it would be nice to discover new games besides sales and based on which games that I had spent the most time playing.  The site has been up for several years now and never really generated that much traffic, so I decided to shutdown the site and open-source all of the code.</p>
+
+<h3>
+<a id="sample-pages" class="anchor" href="#sample-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sample Pages</h3>
+
+<h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
