Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
         </ul>
       </header>
       <section>
-        <p>Steam Recommender was a side project that I intended to do for a long time. I started work on the project in 2013 because I was disappointed with the recommendations that the Steam platform provided.  I thought it would be nice to discover new games besides sales and based on which games that I had spent the most time playing.  The site has been up for several years now and never really generated that much traffic, so I decided to shutdown the site and open-source all of the code.</p>
+        <h3>
+<a id="steam-recommender" class="anchor" href="#steam-recommender" aria-hidden="true"><span class="octicon octicon-link"></span></a>Steam Recommender</h3>
+
+<p>Unfortunately, I have decided to sunset steamrecommender.com.</p>
+
+<p>Steam Recommender was a side project that I intended to do for a long time. I started work on the project in 2013 because I was disappointed with the recommendations that the Steam platform provided.  I thought it would be nice to discover new games besides sales and based on which games that I had spent the most time playing.  The site has been up for several years now and never really generated that much traffic, so I decided to shutdown the site and open-source all of the code.</p>
 
 <p>Steam is a unique platform, since it provides a user's playtime for all games in their Steam library.  If you have a public profile, then anyone can see which games you have been playing and how much time you have spent playing them.  This means that you can randomly sample Steam ids and gather training data for a recommender system.  If you are interested in more technical details see my blog <a href="http://www.wesley-kerr.com/steamrecommender/">post</a> on the subject.  </p>
 
